syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.registerandlogin";
option java_outer_classname = "AuthorityProto";
option objc_class_prefix = "RAL";

package RegisterAndLogin;

// Service定义
service Authority {
  rpc Authority (AuthorityRequest) returns (AuthorityReply) {}
}

//request包含用户名和auth
message AuthorityRequest {
  string userName = 1;
  string auth = 2;
}

//Response包含auth是否仍有效，true表示有效
message AuthorityReply {
  bool isValid = 3;
}
